--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
   </dependencies>
 
   <build>
-    <finalName>demo123</finalName>
+    <finalName>superman</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <plugin>
